[package]
name = "bitmap-png-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
png = "0.17.14"
png-glitch = "0.3.1"
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "chikoski:bitmap-png-glitch"
target = "chikoski:glitch-art/png-glitcher@0.3.5"

[package.metadata.component.dependencies]
